Visualizar ejercicio 1 del dia 6

--- a/Day06-Loops/index.html
+++ b/Day06-Loops/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Day 06 - 30 Days of JavaScript</h1>
-    <!-- <script type="text/javascript" src="./exercise1.js"></script> -->
+    <script type="text/javascript" src="./exercise1.js"></script>
     <script type="text/javascript" src="./random1.js"></script>
     <script type="text/javascript" src="./random2.js"></script>
     <script type="text/javascript" src="./random3.js"></script>
