Ejercicios día 6 - Completos

--- a/Day06-Loops/index.html
+++ b/Day06-Loops/index.html
@@ -15,3 +15,7 @@
     <script type="text/javascript" src="./exercise2.js"></script>
   </body>
 </html>
+
+TAREAS: 
+-Realicé los ejercicios del día 5 de los 30 Days of JavaScript
+-Realicé los ejercicios del nivel 1 y 2 del día 6, falta terminar los ejercicios del nivel <i class="fas fa-signal-3    "></i>https://github.com/LorenitaTL/30DaysOfJavaScript/pull/1
